--- a/src/app/components/flight-result/flight-result.component.html
+++ b/src/app/components/flight-result/flight-result.component.html
@@ -1,12 +1,14 @@
 <section class="container pt-3 px-3">
-   
-    <div class="row justify-content-center gy-2" >
-        <app-flight-card class="col-6 " *ngFor="let air of ViwedAirItinerariesList" [AirItinerary]="air" ></app-flight-card>
-    </div>
 
-    <button [disabled]="this.page == 1 " (click)="PrevPage()" >Prev</button>
-    <span class="p-2 border border-2 mx-2 cursor-pointer"  *ngFor="let n of [].constructor(PagesList);  let i = index" (click)="gotoPage(i+1)">{{i+1}}</span>
-    <button [disabled]="this.page == this.PagesList " (click)="nextPage()" >next</button>
+  <div class="row  gy-2">
+    <app-flight-card class="col-6 " *ngFor="let air of ViwedAirItinerariesList" [AirItinerary]="air"></app-flight-card>
+  </div>
 
+  <div class="my-4 d-flex justify-content-center">
+    <button [disabled]="this.page == 1 " (click)="PrevPage()">Prev</button>
+    <span class="p-2 border border-2 border-dark mx-2 rounded-3 " style="cursor: pointer;"
+      *ngFor="let n of [].constructor(PagesList);  let i = index" [ngClass]="{'bg-success text-light' : page == i+1}"
+      (click)="gotoPage(i+1)">{{i+1}}</span>
+    <button [disabled]="this.page == this.PagesList " (click)="nextPage()">next</button>
+  </div>
 </section>
-
