--- a/src/app/components/flight-result/flight-card/flight-card.component.html
+++ b/src/app/components/flight-result/flight-card/flight-card.component.html
@@ -6,9 +6,11 @@
     </div>
 
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div>stopsNum : {{AirItinerary.allJourney.flights[0].stopsNum}}</div>
+      <p>start : {{AirItinerary.deptDate | date : 'short' }} {{AirItinerary.baggageInformation[0].deptCity}} </p>
+
+      <p>end : {{AirItinerary.arrivalDate | date : 'short'}} {{AirItinerary.baggageInformation[AirItinerary.baggageInformation.length -1].landCity}} </p>
+       {{AirItinerary.totalDuration | FormatMin}}
     </div>
 
   </div>
