--- a/src/app/components/flight-result/flight-result.component.html
+++ b/src/app/components/flight-result/flight-result.component.html
@@ -1,7 +1,7 @@
 <section class="container pt-3 px-3">
 
   <div class="row  gy-2">
-    <app-flight-card class="col-6 " *ngFor="let air of ViwedAirItinerariesList" [AirItinerary]="air"></app-flight-card>
+    <app-flight-card class="col-lg-6  col-md-12" *ngFor="let air of ViwedAirItinerariesList" [AirItinerary]="air"></app-flight-card>
   </div>
 
   <div class="my-4 d-flex justify-content-center">
