--- a/src/app/components/flight-result/flight-card/flight-card.component.html
+++ b/src/app/components/flight-result/flight-card/flight-card.component.html
@@ -10,7 +10,9 @@
       <p>start : {{AirItinerary.deptDate | date : 'short' }} {{AirItinerary.baggageInformation[0].deptCity}} </p>
 
       <p>end : {{AirItinerary.arrivalDate | date : 'short'}} {{AirItinerary.baggageInformation[AirItinerary.baggageInformation.length -1].landCity}} </p>
-       {{AirItinerary.totalDuration | FormatMin}}
+      <p>Duration : {{AirItinerary.totalDuration | FormatMin}}</p>
+      <p>Price : {{AirItinerary.itinTotalFare.amount}} {{AirItinerary.itinTotalFare.currencyCode}}</p>
+
     </div>
 
   </div>
