--- a/src/app/components/flight-result/flight-result.component.html
+++ b/src/app/components/flight-result/flight-result.component.html
@@ -1,8 +1,8 @@
 <section class="container pt-3 ">
 
   <div class="row g-3">
-    <div class="col-3">
-       <app-filter (newItemEvent)="addItem($event)" ></app-filter>
+    <div class="col-3 ">
+       <app-filter class="sticky-top" (newItemEvent)="addItem($event)" ></app-filter>
     </div>
 
 
