[update] filter input

--- a/src/app/components/flight-result/filter/filter.component.html
+++ b/src/app/components/flight-result/filter/filter.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-body">
+  <div class="card-body ">
     <div *ngFor="let airLine of AirLineList">
 
       <mat-checkbox
@@ -19,10 +19,10 @@
 
     <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Dep Airport</mat-label>
-        <input matInput type="text" [(ngModel)]="filters.depAirport" >
+        <input matInput inputFilter  type="text"  [(ngModel)]="filters.depAirport" >
     </mat-form-field>
 
-    <button class="btn btn-dark" (click)="filter()">Search</button>
+    <button class="btn btn-dark mx-1" (click)="filter()">Search</button>
     <button class="btn btn-dark" (click)="reset()">reset</button>
 
   </div>
