--- a/src/app/components/flight-result/flight-result.component.html
+++ b/src/app/components/flight-result/flight-result.component.html
@@ -1,23 +1,23 @@
 <section class="container pt-3 ">
 
   <div class="row g-3">
-    <div class="col-3 ">
+    <div class="col-md-3 ">
        <app-filter class="sticky-top" (newItemEvent)="addItem($event)" ></app-filter>
     </div>
 
 
-    <div class="col-9">
+    <div class="col-md-9">
 
         <div class="row  gy-2">
             <app-flight-card class="col-lg-6  col-md-12" *ngFor="let air of ViwedAirItinerariesList" [AirItinerary]="air"></app-flight-card>
           </div>
         
           <div class="my-4 d-flex justify-content-center">
-            <button [disabled]="this.page == 1 " (click)="PrevPage()">Prev</button>
+            <button class="btn btn-dark" [disabled]="this.page == 1 " (click)="PrevPage()">Prev</button>
             <span class="p-2 border border-2 border-dark mx-2 rounded-3 " style="cursor: pointer;"
               *ngFor="let n of [].constructor(PagesList);  let i = index" [ngClass]="{'bg-success text-light' : page == i+1}"
               (click)="gotoPage(i+1)">{{i+1}}</span>
-            <button [disabled]="this.page == this.PagesList " (click)="nextPage()">next</button>
+            <button class="btn btn-dark" [disabled]="this.page == this.PagesList " (click)="nextPage()">next</button>
           </div>
     </div>
 
